Fix spacing

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header {
   width: 375px;
   height: 67px;
   padding: 16px;
+  margin-top: 30px;
 } 
 
 .logo-img {
